--- a/P10_Reciplease/View/SearchResultTableViewCell.xib
+++ b/P10_Reciplease/View/SearchResultTableViewCell.xib
@@ -10,7 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="SearchResultCell" rowHeight="90" id="KGk-i7-Jjw" customClass="SearchResultTableViewCell" customModule="P10_Reciplease" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="SearchResultTableViewCell" rowHeight="90" id="KGk-i7-Jjw" customClass="SearchResultTableViewCell" customModule="P10_Reciplease" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="327" height="102"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
