--- a/P10_Reciplease/View/SearchResultTableViewCell.xib
+++ b/P10_Reciplease/View/SearchResultTableViewCell.xib
@@ -10,30 +10,33 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="SearchResultTableViewCell" rowHeight="90" id="KGk-i7-Jjw" customClass="SearchResultTableViewCell" customModule="P10_Reciplease" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="327" height="102"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="SearchResultTableViewCell" rowHeight="189" id="KGk-i7-Jjw" customClass="SearchResultTableViewCell" customModule="P10_Reciplease" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="330" height="141"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="327" height="102"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+                <rect key="frame" x="0.0" y="0.0" width="330" height="141"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ng0-Xj-c1e">
-                        <rect key="frame" x="0.0" y="0.0" width="327" height="102"/>
+                        <rect key="frame" x="0.0" y="0.0" width="330" height="140"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="140" id="cVU-Xv-mUW"/>
+                        </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qFJ-lH-oOT">
-                        <rect key="frame" x="4" y="80" width="319" height="18"/>
+                        <rect key="frame" x="4" y="119" width="322" height="18"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m7n-0h-CdK">
-                        <rect key="frame" x="4" y="55" width="319" height="21"/>
+                        <rect key="frame" x="4" y="94" width="322" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="09P-xg-FGf">
-                        <rect key="frame" x="257" y="10" width="60" height="40"/>
+                        <rect key="frame" x="260" y="10" width="60" height="40"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="W5h-e7-xGL">
                                 <rect key="frame" x="2" y="2" width="56" height="16"/>
@@ -62,17 +65,17 @@
                     </view>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="qFJ-lH-oOT" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="4" id="0wO-T2-W1U"/>
-                    <constraint firstAttribute="trailing" secondItem="qFJ-lH-oOT" secondAttribute="trailing" constant="4" id="1Cy-sp-3ac"/>
                     <constraint firstAttribute="bottom" secondItem="ng0-Xj-c1e" secondAttribute="bottom" id="7VD-wK-XmX"/>
-                    <constraint firstItem="m7n-0h-CdK" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="4" id="F4d-EL-dkG"/>
-                    <constraint firstItem="qFJ-lH-oOT" firstAttribute="top" secondItem="m7n-0h-CdK" secondAttribute="bottom" constant="4" id="IeE-4L-n07"/>
-                    <constraint firstAttribute="bottom" secondItem="qFJ-lH-oOT" secondAttribute="bottom" constant="4" id="KgT-3K-ZkP"/>
                     <constraint firstItem="ng0-Xj-c1e" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="LBH-st-kxR"/>
+                    <constraint firstAttribute="trailing" secondItem="m7n-0h-CdK" secondAttribute="trailing" constant="4" id="MWo-Ca-wOY"/>
                     <constraint firstItem="ng0-Xj-c1e" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="NoH-hn-JCx"/>
-                    <constraint firstItem="09P-xg-FGf" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="Ps9-rb-OvW"/>
-                    <constraint firstAttribute="trailing" secondItem="09P-xg-FGf" secondAttribute="trailing" constant="10" id="fy0-nR-uWh"/>
-                    <constraint firstAttribute="trailing" secondItem="m7n-0h-CdK" secondAttribute="trailing" constant="4" id="hlB-DW-ByK"/>
+                    <constraint firstItem="ng0-Xj-c1e" firstAttribute="bottom" secondItem="qFJ-lH-oOT" secondAttribute="bottom" constant="3" id="O53-fC-YrQ"/>
+                    <constraint firstItem="09P-xg-FGf" firstAttribute="top" secondItem="ng0-Xj-c1e" secondAttribute="top" constant="10" id="Ps9-rb-OvW"/>
+                    <constraint firstItem="m7n-0h-CdK" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="4" id="cop-DM-a4p"/>
+                    <constraint firstItem="qFJ-lH-oOT" firstAttribute="top" secondItem="m7n-0h-CdK" secondAttribute="bottom" constant="4" id="fI3-zv-XfU"/>
+                    <constraint firstItem="qFJ-lH-oOT" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="4" id="fSH-UP-3z6"/>
+                    <constraint firstItem="ng0-Xj-c1e" firstAttribute="trailing" secondItem="09P-xg-FGf" secondAttribute="trailing" constant="10" id="fy0-nR-uWh"/>
+                    <constraint firstAttribute="trailing" secondItem="qFJ-lH-oOT" secondAttribute="trailing" constant="4" id="j19-Ae-99R"/>
                     <constraint firstAttribute="trailing" secondItem="ng0-Xj-c1e" secondAttribute="trailing" id="vsu-oK-mYW"/>
                 </constraints>
             </tableViewCellContentView>
@@ -85,7 +88,7 @@
                 <outlet property="recipeTitleLabel" destination="m7n-0h-CdK" id="X85-MY-bHU"/>
                 <outlet property="topRightView" destination="09P-xg-FGf" id="9QD-V5-2l1"/>
             </connections>
-            <point key="canvasLocation" x="139.85507246376812" y="143.97321428571428"/>
+            <point key="canvasLocation" x="142.02898550724638" y="157.03125"/>
         </tableViewCell>
     </objects>
     <resources>
