--- a/P10_Reciplease/View/Base.lproj/Main.storyboard
+++ b/P10_Reciplease/View/Base.lproj/Main.storyboard
@@ -37,6 +37,13 @@
                                 <rect key="frame" x="0.0" y="88" width="414" height="725"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </tableView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="SjW-0w-ebl">
+                                <rect key="frame" x="0.0" y="388" width="414" height="119"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="xEs-Af-61n"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -51,12 +58,13 @@
                     <navigationItem key="navigationItem" id="vXB-rP-L9k"/>
                     <connections>
                         <outlet property="favoriteTableView" destination="0wi-Kk-X6E" id="vnn-eJ-29O"/>
+                        <outlet property="noRecipeLabel" destination="SjW-0w-ebl" id="kLp-8z-kIm"/>
                         <segue destination="mb6-cg-XuQ" kind="show" identifier="segueFromFavoriteToRecipeDetails" id="EA1-MU-Q7e"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6ey-5h-26c" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1719" y="177"/>
+            <point key="canvasLocation" x="1718.840579710145" y="176.78571428571428"/>
         </scene>
         <!--Reciplease-->
         <scene sceneID="KgV-Yk-Vze">
