--- a/P10_Reciplease/View/Base.lproj/Main.storyboard
+++ b/P10_Reciplease/View/Base.lproj/Main.storyboard
@@ -74,6 +74,10 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Rp8-U2-XBF">
+                                <rect key="frame" x="0.0" y="88" width="414" height="106"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="What's in your fridge ?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="azB-fm-bKJ">
                                 <rect key="frame" x="10" y="98" width="394" height="25.5"/>
                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="21"/>
@@ -120,7 +124,7 @@
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your ingredients :" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="55i-zO-9mb">
                                         <rect key="frame" x="0.0" y="0.0" width="285.5" height="31"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="19"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
@@ -177,15 +181,19 @@
                             <constraint firstItem="aPP-Wc-4Ua" firstAttribute="trailing" secondItem="azB-fm-bKJ" secondAttribute="trailing" constant="10" id="K9T-b3-h1h"/>
                             <constraint firstItem="u5G-LZ-h5S" firstAttribute="top" secondItem="4AD-HN-ori" secondAttribute="bottom" constant="20" id="KtI-qN-Abs"/>
                             <constraint firstItem="OWi-t5-WgX" firstAttribute="top" secondItem="o3b-uS-7aU" secondAttribute="bottom" constant="30" id="LKh-8G-BiZ"/>
+                            <constraint firstItem="Rp8-U2-XBF" firstAttribute="leading" secondItem="aPP-Wc-4Ua" secondAttribute="leading" id="NGb-8M-6m8"/>
+                            <constraint firstItem="Rp8-U2-XBF" firstAttribute="top" secondItem="aPP-Wc-4Ua" secondAttribute="top" id="Pb0-Of-EZP"/>
                             <constraint firstItem="4AD-HN-ori" firstAttribute="top" secondItem="OWi-t5-WgX" secondAttribute="bottom" constant="5" id="TVf-oH-cSs"/>
                             <constraint firstItem="azB-fm-bKJ" firstAttribute="top" secondItem="aPP-Wc-4Ua" secondAttribute="top" constant="10" id="UF6-tI-2vf"/>
                             <constraint firstItem="aPP-Wc-4Ua" firstAttribute="trailing" secondItem="OWi-t5-WgX" secondAttribute="trailing" constant="10" id="UoH-NK-2Lk"/>
+                            <constraint firstItem="Rp8-U2-XBF" firstAttribute="trailing" secondItem="aPP-Wc-4Ua" secondAttribute="trailing" id="V00-HQ-dQH"/>
                             <constraint firstItem="4AD-HN-ori" firstAttribute="leading" secondItem="aPP-Wc-4Ua" secondAttribute="leading" id="eoL-jK-ClS"/>
                             <constraint firstItem="aPP-Wc-4Ua" firstAttribute="trailing" secondItem="o3b-uS-7aU" secondAttribute="trailing" constant="10" id="fdw-4o-nUd"/>
                             <constraint firstItem="aPP-Wc-4Ua" firstAttribute="trailing" secondItem="u5G-LZ-h5S" secondAttribute="trailing" constant="30" id="r4X-gy-pMH"/>
                             <constraint firstItem="u5G-LZ-h5S" firstAttribute="top" secondItem="3FR-1R-jbj" secondAttribute="bottom" constant="8" id="rP7-6F-ykU"/>
                             <constraint firstItem="o3b-uS-7aU" firstAttribute="leading" secondItem="aPP-Wc-4Ua" secondAttribute="leading" constant="10" id="uU6-XG-Ory"/>
                             <constraint firstItem="aPP-Wc-4Ua" firstAttribute="bottom" secondItem="u5G-LZ-h5S" secondAttribute="bottom" constant="20" id="v5J-Yo-DzH"/>
+                            <constraint firstItem="Rp8-U2-XBF" firstAttribute="bottom" secondItem="o3b-uS-7aU" secondAttribute="bottom" constant="15" id="vib-tC-nNF"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Search" image="magnifyingglass.circle" catalog="system" selectedImage="magnifyingglass.circle.fill" id="Isn-Vg-XhY"/>
@@ -202,7 +210,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Lm3-eo-c36" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1720" y="-508"/>
+            <point key="canvasLocation" x="1718.840579710145" y="-508.25892857142856"/>
         </scene>
         <!--Search Result View Controller-->
         <scene sceneID="Z3O-6E-uij">
@@ -411,7 +419,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="EA1-MU-Q7e"/>
+        <segue reference="jWE-DM-HAf"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" red="0.038537143529999998" green="0.58823529409999997" blue="0.33644970410000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
     <resources>
